// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountTag render matches snapshot when name prop is defined 1`] = `
<View
  accessibilityRole="none"
  accessible={true}
  onLayout={[Function]}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#4459ff1a",
      "borderColor": "#4459ff",
      "borderRadius": 999,
      "borderWidth": 0,
      "color": "#4459ff",
      "padding": 16,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
  testID="tagbase"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 4,
          "height": 16,
          "overflow": "hidden",
          "width": 16,
        }
      }
    >
      <View
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    </View>
    <View
      accessible={false}
      style={
        {
          "width": 4,
        }
      }
      testID="listitem-gap"
    />
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
      testID="tagbase-text"
    >
      Sample Contract
    </Text>
  </View>
</View>
`;

exports[`AccountTag render matches snapshot when name prop isn't defined 1`] = `
<View
  accessibilityRole="none"
  accessible={true}
  onLayout={[Function]}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#4459ff1a",
      "borderColor": "#4459ff",
      "borderRadius": 999,
      "borderWidth": 0,
      "color": "#4459ff",
      "padding": 16,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
  testID="tagbase"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 4,
          "height": 16,
          "overflow": "hidden",
          "width": 16,
        }
      }
    >
      <View
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    </View>
    <View
      accessible={false}
      style={
        {
          "width": 4,
        }
      }
      testID="listitem-gap"
    />
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
      testID="tagbase-text"
    >
      0x1
    </Text>
  </View>
</View>
`;
